--- a/.github/workflows/ci-dags.yml
+++ b/.github/workflows/ci-dags.yml
@@ -13,11 +13,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:  
       - name: Checkout code
-      - uses: actions/checkout@v4
+        uses: actions/checkout@v4
 
       # 파이썬 설치
       - name: Set up Python
-      - uses: actions/setup-python@v4
+        uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
@@ -49,15 +49,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-      - uses: actions/checkout@v4
+        uses: actions/checkout@v4
 
       - name: Set up Python
-      - uses: actions/setup-python@v4
+        uses: actions/setup-python@v4
         with:
           python-verion: '3.11'
 
       - name: Install gcloud CLI
-      - uses: google-github-actions/setup-gcloud@v1
+        uses: google-github-actions/setup-gcloud@v1
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
