--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,22 @@ selenium = "^4.29.0"
 apache-airflow = "^2.10.5"
 pyspark = "^3.5.5"
 pandas = "^2.2.3"
-numpy = "^2.2.4"
 google-cloud-storage = "^3.1.0"
 python-dotenv = "^1.0.1"
+gcsfs = "^2025.3.1"
+konlpy = "^0.6.0"
+wordcloud = "^1.9.4"
+pyarrow = "^19.0.1"
+tqdm = "^4.67.1"
+transformers = "^4.50.3"
+torch = "^2.6.0"
+numpy = "^1.26.0"
+tensorflow = "^2.19.0"
+google-cloud-bigquery = "^3.31.0"
+google-auth = "^2.38.0"
+accelerate = "^1.6.0"
+ipykernel = "^6.29.5"
+jpype1 = "^1.5.2"
 
 
 [tool.poetry.group.dev.dependencies]
